code/tui/snapshots/fullscreen/conversation_flow/conversation_submitted.snap
---
source: code/tui/src/app/conversation_flow_tests.rs
expression: submitted_frame
---
  .                                                                                    [Dashboard]

> 请 正 常 回 复 ， 并 展 示 多 行 输 出 。






















⠋ Starting... · 0s
                                                                 /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  ⏸ Manual · ← Dashboard · ? for shortcuts
